--- a/About Page/About.html
+++ b/About Page/About.html
@@ -200,6 +200,53 @@
                   </tbody>
               </table>
               </div>
+              <div class="container">
+                <h2 class="section-title">Lab Details</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>S.No</th>
+                            <th>Lab Name</th>
+                            <th>Equipments</th>
+                            <th>Laboratory Cost</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Algorithm & Data Structure Lab</td>
+                            <td>
+                                <span class="bold-text">20 PCs,</span> Processor –i5(6-Core, 12M Cache, 2.9GHz to 4.3GHz), Memory: 8GB, 1x8GB, DDR4, Hard drive: 1TB
+                            </td>
+                            <td>Rs.12,06,500.00</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Database Lab</td>
+                            <td>
+                                <span class="bold-text">20 PCs,</span> Processor –i5(6-Core, 12M Cache, 2.9GHz to 4.3GHz), Memory: 8GB, 1x8GB, DDR4, Hard drive: 1TB
+                            </td>
+                            <td>Rs.10,22,400.00</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Digital Electronics & Microprocessor Lab</td>
+                            <td>
+                                <span class="bold-text">20 PCs,</span> Processor –i5(6-Core, 12M Cache, 2.9GHz to 4.3GHz), Memory: 8GB, 1x8GB, DDR4, Hard drive: 1TB
+                            </td>
+                            <td>Rs.12,29,000.00</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Computer Graphics & Multimedia Lab</td>
+                            <td>
+                                <span class="bold-text">20 PCs,</span> Processor –i5(6-Core, 12M Cache, 2.9GHz to 4.3GHz), Memory: 8GB, 1x8GB, DDR4, Hard drive: 1TB
+                            </td>
+                            <td>Rs.10,21,400.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             </section>
           </div>
           <footer>
