--- a/AIML Website/HomePage.html
+++ b/AIML Website/HomePage.html
@@ -26,6 +26,7 @@
    
   </head>
   <body>
+    <header>
     <div class="home-page">
       <header>
         <div class="header-container">
@@ -35,7 +36,10 @@
             </div>
             <div class="nav">
                 <button class="nav-button">Home</button>
-                <button class="nav-button">About</button>
+                <!-- <button class="nav-button" ><a href="/AIML Website/About Page/About.html">About</a></button> -->
+                <a href="/AIML Website/About Page/About.html" class="about">
+                  <button  class="nav-button">About</button>
+                </a>
                 <button><img src="Images/sidebar.jpg" ></button>
             </div>
         </div>
