--- a/About Page/About.html
+++ b/About Page/About.html
@@ -17,7 +17,9 @@
                     <img src="Images/ltce logo.jpg" alt="College Logo">
                 </div>
                 <div class="nav">
-                    <button class="nav-button">Home</button>
+                    <a href="/AIML Website/HomePage.html">
+                        <button class="nav-button">Home</button>
+                    </a>
                     <button class="nav-button">About</button>
                     <button><img src="Images/sidebar.jpg" ></button>
                 </div>
