--- a/AIML Website/HomePage.html
+++ b/AIML Website/HomePage.html
@@ -18,6 +18,7 @@
     /> --> 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="HomePage.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="font.css" />
@@ -237,7 +238,9 @@
             <h2 class="location_title ui heading size-headinglg">GOOGLE MAP LOCATION</h2>
             <div class="location_address-container">
               <div class="location_map-container">
-                <div class="location_map"></div>
+                <div class="location_map">
+                  <iframe class="actAsDiv" style="width:100%;height:26.5rem;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;q=Lokmanya%20Tilak%20College%20Of%20EngineeringKopar%20Khairane%2C%20Sector%204%2C%20Vikas%20Nagar%2C%20Navi%20Mumbai%2C%20Maharashtra%20&amp;aq=0&amp;ie=UTF8&amp;t=m&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe>
+                </div>
               </div>
               <div class="location_address-details">
                 <h3 class="column-description_title ui heading size-headingmd">ADDRESS:</h3>
