--- a/About Page/About.html
+++ b/About Page/About.html
@@ -8,20 +8,17 @@
     <link rel="stylesheet" href="About.css">
 </head>
 <body>
-
         <div class="home-page">
           <header>
             <div class="header-container">
                 <div class="logo">
                     <!-- Replace with your logo -->
-                    <img src="Images/ltce logo.jpg" alt="College Logo">
+                    <img src="/AIML Website/Images/ltce logo.jpg" alt="College Logo">
                 </div>
                 <div class="nav">
                     <a href="/AIML Website/HomePage.html">
                         <button class="nav-button">Home</button>
                     </a>
-                    <button class="nav-button">About</button>
-                    <button><img src="Images/sidebar.jpg" ></button>
                 </div>
             </div>
         </div>
@@ -269,14 +266,14 @@
                 </div>
                 <div class="footer-content">
                     <div class="footer-left">
-                        <img src="logo.png" alt="College Logo" class="college-logo">
+                        <img src="/AIML Website/Images/ltce logo.jpg" alt="College Logo" class="college-logo">
                         <p>Let's connect with our socials</p>
                         <div class="social-icons">
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/LTCEOfficial"><i class="fab fa-facebook"></i></a>
+                            <a href="https://x.com/LTCE_Official/status/1352258020512837632?s=19"><i class="fab fa-twitter"></i></a>
+                            <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
+                            <a href="https://www.instagram.com/ltce_official?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCjxVhT8dgsmaORgmMXLym6g"><i class="fab fa-youtube"></i></a>
                         </div>
                         <div class="contact">
                             <p>Contact Us</p>
@@ -288,14 +285,14 @@
                     </div>
                     <div class="footer-middle">
                         <ul>
-                            <li><strong>HOME</strong></li>
+                            <li><strong><a href="">HOME</a></strong></li>
                             <li><a href="#">ABOUT</a></li>
                             <li><a href="#">ACHIEVEMENTS</a></li>
-                            <li><a href="#">CLUB INFO</a></li>
+                            <li><a href="/AIML Website/Clubs/HomePageClub/Clubs1.html">CLUB INFO</a></li>
                             <li><a href="#">NEWS</a></li>
-                            <li><a href="#">FACULTY</a></li>
+                            <li><a href="/AIML Website/Faculty Page/Teaching Staff/Teaching.html">FACULTY</a></li>
                             <li><a href="#">TNP</a></li>
-                            <li><a href="#">ERP</a></li>
+                            <li><a href="https://erp.ltjss.net">ERP</a></li>
                         </ul>
                     </div>
                     <div class="footer-right">
@@ -306,7 +303,7 @@
                         <p><i class="fas fa-user"></i> PRANAY BHOIR</p>
                         <br>
                         <p><strong>UNDER GUIDANCE OF</strong></p>
-                        <p><i class="fas fa-user"></i> PROF. ASHWINI PAWAR</p>
+                        <p><i class="fas fa-user"></i> <strong>PROF. ASHWINI PAWAR</strong></p>
                     </div>
                 </div>
                 <div class="footer-bottom">
